[gd_scene load_steps=8 format=3 uid="uid://beq6os1qypmat"]

[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://Assets/art/background.png" id="1_4nlbu"]
[ext_resource type="Script" uid="uid://i2lqgiy6iiwu" path="res://Scenes/Battle/battle_scene.gd" id="1_lcoea"]
[ext_resource type="Resource" uid="uid://bwpvvr63u1g71" path="res://Resources/Player/sample_player.tres" id="2_cbixj"]
[ext_resource type="PackedScene" uid="uid://43xkdnm2fpla" path="res://Scenes/Player/player.tscn" id="2_lcoea"]
[ext_resource type="PackedScene" uid="uid://cc0r5lmc5gi4r" path="res://Scenes/Enemy/enemy.tscn" id="3_jp0ri"]
[ext_resource type="Resource" uid="uid://c4bq58733ekcp" path="res://Resources/Enemies/Ghost/ghost.tres" id="4_cbixj"]
[ext_resource type="PackedScene" uid="uid://ba7hfljytxc3x" path="res://Scenes/GUI/Misc/tooltip.tscn" id="7_cbixj"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_lcoea")
char_stats = ExtResource("2_cbixj")
metadata/_edit_lock_ = true

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.359069, 0.359069, 0.359069, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4nlbu")
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_lcoea")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(0.8, 0.8)

[node name="EnemyHandler" type="Node2D" parent="."]

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("3_jp0ri")]
position = Vector2(160, 90)
stats = ExtResource("4_cbixj")

[node name="PlayerHandler" type="Node" parent="."]

[node name="BattleUI" type="CanvasLayer" parent="."]

[node name="Tooltip" parent="BattleUI" instance=ExtResource("7_cbixj")]
offset_top = 4.0
offset_bottom = 64.0

[node name="WinButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Win"

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
